#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libcxx-examples], [0.0.0], [libcxx-users@lists.libcxx.org])
AC_CONFIG_SRCDIR([classhier.C])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([dist-bzip2 foreign -Wno-portability])
AM_SILENT_RULES([yes])

AC_PROG_CC
AC_PROG_CXX
LIBCXX_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
