noinst_PROGRAMS=\
	bodydecoder		\
	bodydecoder2		\
	bodydecoder3		\
	bodydecoder4		\
	bodydecoder5		\
	bodystart		\
	headercollector		\
	headeriter		\
	newlineparser		\
\
	 #

bodydecoder_SOURCES=bodydecoder.C
bodydecoder_LDADD=-lcxx

bodydecoder2_SOURCES=bodydecoder2.C
bodydecoder2_LDADD=-lcxx

bodydecoder3_SOURCES=bodydecoder3.C
bodydecoder3_LDADD=-lcxx

bodydecoder4_SOURCES=bodydecoder4.C
bodydecoder4_LDADD=-lcxx

bodydecoder5_SOURCES=bodydecoder5.C
bodydecoder5_LDADD=-lcxx

bodystart_SOURCES=bodystart.C
bodystart_LDADD=-lcxx

headercollector_SOURCES=headercollector.C
headercollector_LDADD=-lcxx

headeriter_SOURCES=headeriter.C
headeriter_LDADD=-lcxx

newlineparser_SOURCES=newlineparser.C
newlineparser_LDADD=-lcxx
